[project]
name = "sitk-tools"
version = "0.1.0"
description = "Utility scripts for medical image processing built on SimpleITK"
requires-python = ">=3.10"
dependencies = [
    "simpleitk",
    "numpy",
]

[project.optional-dependencies]
vtk = ["vtk"]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "bound_obj",
    "compareimages",
    "dicomseries",
    "dictdump",
    "extract_objects",
    "extract_subimages",
    "hdr2mhd",
    "histo",
    "lmreg",
    "merge_slices",
    "nifti2vti",
    "paint_points",
    "query_vol",
    "radial_slices",
    "removemetadata",
    "resample_to_volume",
    "resizeVol",
    "show",
    "sitk_test",
    "vector",
]
